--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,253 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Ubuntu', sans-serif;
+
+}
+:root{
+    --main-bg-color : #1c1e29;
+    --btn-bg-color : #4aed88;
+    --btn-hover-bg-color : #2b824c;
+    --link-color :#4aed88;
+}
+body{
+    background-color: var(--main-bg-color) ;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.home{
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.logoImg{
+    height: 3rem;
+    width: 3rem;
+}
+.formWrapper{
+    height: fit-content;
+    width: 30rem;
+    max-width: 90%;
+    background: #282a36;
+    border-radius: 5px;
+    padding: 1.5rem 2rem;
+}
+.formHeader{
+    margin-top: 1rem;
+}
+.formHeader h1{
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 1.75rem;
+    margin-bottom: 1rem;
+}
+.formHeader i{
+    color: var(--btn-bg-color);
+}
+.formHeader h4{
+    font-size: 1.1rem;
+    color: white;
+    font-weight: 400;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 0;
+}
+.inputBox{
+    margin: .5rem 0;
+    padding: .75rem .6rem;
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    font-size: .85rem;
+    font-weight: 400;
+}
+::placeholder{
+    color: rgba(0, 0, 0, 0.7);
+}
+.btn{
+    padding: .6rem .25em;
+    border-radius: .5rem;
+    outline: none;
+    border: none;
+    cursor: pointer;
+    background:var(--btn-bg-color);
+    transition: all .3s ease-in-out;
+}
+.btn:hover{
+    background: var(--btn-hover-bg-color);
+    color: var(--main-bg-color);
+}
+.joinBtn{
+    font-weight: 600;
+    width: 30%;
+    margin: .5rem 0;
+    margin-left: 70%;
+}
+form span{
+    margin: .5rem auto;
+    color: white;
+}
+.createnew{
+    color: var(--link-color);
+    text-decoration: none;
+}
+.footer{
+    color: white;
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 1rem;
+}
+.footer a{
+    color: var(--link-color);
+    text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+
+
+
+
+
+
+/* ---------------------------------------------- editor page ------------------------------------------------------  */
+.editorWrapper{
+    display: flex;
+}
+.left{
+    height: 100vh;
+    width: 25vw;
+}
+.right{
+    height: 100vh;
+    width: 75vw;
+    background:#282a36;
+}
+
+.header{
+    padding: .8rem .5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.header h2{
+    font-size: 1.75rem;
+    color: var(--btn-bg-color);
+}
+.header i{
+    color: white;
+}
+.clientList{
+    height: 70%;
+    max-height: 70%;
+}
+.clientList h3{
+    color: white;
+    font-size: 1rem;
+    margin:.5rem 0;
+    margin-left: .5rem;
+}
+
+.bottom{
+    height: 18%;
+    max-height: 18%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.copyBtn{
+    padding: .5rem 2rem;
+    width: 75%;
+    outline: none;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    font-weight: 500;
+    font-size: 1rem;
+    background: var(--btn-bg-color);
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+.leaveBtn{
+    padding: .5rem 2rem;
+    width: 75%;
+    outline: none;
+    border: none;
+    color: white;
+    font-size: 1rem;
+    border-radius: 5px;
+    font-weight: 500;
+    background: var(--btn-hover-bg-color);
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+    
+}
+.copyBtn:hover{
+    background:#282a36;
+}
+.leaveBtn:hover{
+    background:#282a36;
+}
+.hr{
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+.users{
+    height: calc(100% - 2rem);
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: auto;
+
+}
+.user-info{
+    height: fit-content;
+    margin: .5rem;
+}
+.user-info span{
+    color: white;
+    text-transform: capitalize;
+    font-size: .85rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.user-card{
+    height: 3.75rem;
+    width: 3.75rem;
+    margin-bottom: .25rem;
+    background: rgb(255, 110, 195);
+    color: #282a36;
+    font-weight: 600;
+    font-size: 1.55rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+
+
+
+/* ------------------- scrollbar --------------------------------------  */
+/* width */
+::-webkit-scrollbar {
+    width: 4px;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background:var(--main-bg-color);
   }
-  to {
-    transform: rotate(360deg);
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: var(--btn-bg-color);
   }
-}
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
