code editor added using codemirror package

--- a/src/App.css
+++ b/src/App.css
@@ -122,7 +122,6 @@ form span{
 .right{
     height: 100vh;
     width: 75vw;
-    background:#282a36;
 }
 
 .header{
@@ -200,7 +199,7 @@ form span{
     display: flex;
     flex-wrap: wrap;
     overflow-y: auto;
-
+    
 }
 .user-info{
     height: fit-content;
@@ -228,9 +227,9 @@ form span{
     border-radius: 5px;
 }
 
-
-
-
+.CodeMirror{
+    height: 100vh !important;
+}
 /* ------------------- scrollbar --------------------------------------  */
 /* width */
 ::-webkit-scrollbar {
